Remove ClienteRequest, ClienteResponse > ClienteDTO + FixParadas
